adjust to image path

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body class="green">
     <div id="app">  
       <header>
-        <img src="/assets/copa-logo.png" alt="logo" >        
+        <img src="./assets/copa-logo.png" alt="logo" >        
       </header>
       <main id="cards">
       </main>  
